get investment rest-api routes
